--- a/space-explorer/src/styles/ResetCSS.scss
+++ b/space-explorer/src/styles/ResetCSS.scss
@@ -41,6 +41,7 @@ html {
 /* Set core root defaults */
 body {
   width: 100%;
+  height: 100%;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   -webkit-overflow-scrolling: touch;
@@ -60,7 +61,6 @@ picture {
 
 @media screen and (max-width: 766px) {
   html {
-    min-height: 100dvh;
-    padding-bottom: 50px;
+    height: 100svh;
   }
 }
